# tricore-emulator

./: README.md
firmware/blink/: Makefile  blink.c
trimul/: CMakeLists.txt
trimul/inc/: memory.hpp  register.hpp  registers.hpp
trimul/src/: main.cpp  memory.cpp
